# estimate_model

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
bm/: __init__.py  enhanced_example.py  estimate.py  synthetic_distribution.py
bm/examples/: README.md  demo_auto.ipynb  demo_manual.ipynb  is_demo.py  is_demo_10_labels_5_dims.py  plot_results.py  sample_plots.py  train_mlp_comparison.py
bm/experiments/: __init__.py  configs.py  dataset_utils.py  plotting_utils.py  run.py  training.py
bm/test/: verify_implementations.py
