[project]
name = "bm"
version = "0.1.0.3"
description = "Benchmark and Estimate Data Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "ml-collections>=1.0.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
